[tool.poetry]
name = "notify_py"
version = "0.3.3"
description = "Cross-platform desktop notification library for Python"
authors = ["Mustafa Mohamed <mustafa@ms7m.me>"]
repository = "https://github.com/ms7m/notify-py"
readme = "README.md"
license = "MIT"
documentation = "https://github.com/ms7m/notify-py"
include = ["notifypy/py-logo.png", "notifypy/example_notification_sound.wav", "notifypy/os_notifiers/binaries/*"]
packages = [
    { include = "notifypy" },
]
[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.5.3"
jeepney = [
    { version = '*', platform = 'linux' },
]

[tool.poetry.dev-dependencies]
appdirs = "1.4.4"
atomicwrites = "1.4.0"
attrs = "20.3.0"
black = "20.8b1"
click = "7.1.2"
colorama = "0.4.4"
importlib-metadata = "3.1.0"
iniconfig = "1.1.1"
loguru = "0.5.3"
mypy-extensions = "0.4.3"
packaging = "20.7"
pathspec = "0.8.1"
pluggy = "0.13.1"
py = "1.9.0"
pyparsing = "2.4.7"
pytest = "6.1.2"
toml = "0.10.2"
typed-ast = "1.4.1"
typing-extensions = "3.7.4.3"
win32-setctime = "1.0.3"
zipp = "3.4.0"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

