[tool.poetry]
name = "notify_py"
version = "0.3.41"
description = "Cross-platform desktop notification library for Python"
authors = ["Mustafa Mohamed <mustafa@ms7m.me>"]
repository = "https://github.com/ms7m/notify-py"
readme = "README.md"
license = "MIT"
documentation = "https://github.com/ms7m/notify-py"
include = ["notifypy/py-logo.png", "notifypy/example_notification_sound.wav", "notifypy/os_notifiers/binaries/*"]
packages = [
    { include = "notifypy" },
]
[tool.poetry.dependencies]
python = ">=3.6,<4.0"
loguru = "^0.5.3,<=0.6.0"
jeepney = [
    { version = '*', platform = 'linux' },
]

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^20.8b1"
typed-ast = "1.5.2"
pylint = "*"

[tool.poetry.scripts]
notifypy = "notifypy.cli:entry"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
